--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref
 certifi
 crispy-bootstrap5
 distlib
+dj-database-url
 Django
 django-crispy-forms
 filelock
@@ -10,6 +11,7 @@ pillow
 pipenv
 platformdirs
 psycopg2
+psycopg2-binary
 PyAutoGUI
 PyGetWindow
 PyMsgBox
@@ -18,5 +20,6 @@ PyRect
 PyScreeze
 pytweening
 sqlparse
+typing_extensions
 tzdata
 virtualenv
